# Apex-Abi-yt-downloader

./: README.md  REPLIT.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: downloads.rs  mod.rs  settings.rs  system.rs
src-tauri/src/engine/: converter.rs  downloader.rs  mod.rs  resolver.rs
src-tauri/src/models/: download.rs  mod.rs  settings.rs  video.rs
src-tauri/src/services/: history.rs  mod.rs  settings.rs
src-tauri/src/utils/: format.rs
src/components/: Button.tsx  Dashboard.tsx  DownloadCard.tsx  Input.tsx  ProgressBar.tsx  SettingsModal.tsx  index.ts
src/hooks/: useDownloads.ts
src/stores/: useAppStore.ts
src/types/: index.ts
src/utils/: format.ts  tauri.ts
